--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,16 @@
 ### Custom ###
 .prettierignore
 
+### Vue ###
+# gitignore template for Vue.js projects
+#
+# Recommended template: Node.gitignore
+
+# TODO: where does this rule come from?
+docs/_book
+
+# TODO: where does this rule come from?
+test/
 
 ### Django ###
 *.log
