feat: JPA 설정 및 코드 추가

--- a/Spring/Spring_Intro/hello-spring/build.gradle
+++ b/Spring/Spring_Intro/hello-spring/build.gradle
@@ -18,9 +18,14 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // 선택한 thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-web' // 선택한 web project
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+//	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA (jdbc포함)
+
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test' // 기본적으로 들어가는 test 라이브러리 (Junit5)
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 }
 
 tasks.named('test') {
